--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body { margin: 0; background-color: #0f172a; color: white; font-family: 'Pretendard', sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; overflow: hidden; }
         .container { text-align: center; animation: fadeIn 1.5s ease-out; }
         h1 { font-size: 3rem; letter-spacing: -1px; margin-bottom: 10px; background: linear-gradient(to right, #38bdf8, #818cf8); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-        p { font-size: 1.1rem; color: #94a3b8; margin-bottom: 30px; }
+        p { font-size: 1.5rem; color: #94a3b8; margin-bottom: 30px; font-weight: bold; } /* 문구 강조를 위해 크기 키움 */
         .links a { text-decoration: none; color: white; border: 1px solid #334155; padding: 10px 20px; border-radius: 50px; transition: 0.3s; margin: 0 5px; }
         .links a:hover { background: white; color: black; }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
@@ -17,8 +17,7 @@
 <body>
     <div class="container">
         <h1>Continuum Space</h1>
-        <p>새로운 시작을 환영합니다.</p>
-        <div class="links">
+        <p>어, 어서오고</p> <div class="links">
             <a href="#">About</a>
             <a href="#">Projects</a>
             <a href="#">Contact</a>
