--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Continuum Space</title>
     <style>
-        /* 기존 스타일 유지 및 스크롤 허용을 위한 수정 */
+        /* 기존 스타일 유지 */
         body { margin: 0; background-color: #3d2b1f; color: #f5f5f5; font-family: 'Pretendard', sans-serif; }
         
-        /* 메인 컨테이너: 처음엔 투명하다가 스크롤 시 나타남 */
+        /* 메인 컨테이너 */
         .container { 
             text-align: center; 
             display: none; 
@@ -39,14 +39,15 @@
         #intro-screen h2 { color: #6B8E23; font-size: 2rem; animation: pulse 2s infinite; }
         @keyframes pulse { 0% { opacity: 0.5; } 50% { opacity: 1; } 100% { opacity: 0.5; } }
 
-        /* --- 추가된 스크롤 페이지 영역 --- */
+        /* --- 수정된 스크롤 페이지 영역 (아이보리 배경) --- */
         #scroll-page {
             display: none;
-            height: 250vh; /* 스크롤 길이를 충분히 확보 */
-            background: linear-gradient(to bottom, #3d2b1f, #2a1d15);
+            height: 250vh; 
+            background-color: #FFFFF0; /* 아이보리 색상 적용 */
             text-align: center;
             padding-top: 20vh;
         }
+        /* 아이보리 배경에서 잘 보이도록 가이드 텍스트 색상 유지 혹은 조정 */
         .scroll-guide { color: #6B8E23; font-size: 1.8rem; font-weight: bold; transition: opacity 0.5s; }
     </style>
 </head>
@@ -81,14 +82,12 @@
     </div>
 
     <script>
-        // 인트로 클릭 시 스크롤 페이지 활성화
         function startScrollPage() {
             document.getElementById('intro-screen').style.display = 'none';
             document.getElementById('scroll-page').style.display = 'block';
             window.scrollTo(0, 0);
         }
 
-        // 스크롤 감지 및 메인 컨테이너 노출 (40% 지점)
         window.onscroll = function() {
             const scrollPage = document.getElementById('scroll-page');
             if (scrollPage.style.display === 'block') {
@@ -100,9 +99,13 @@
                     mainContainer.style.display = 'block';
                     mainContainer.style.animation = 'fadeIn 1s forwards';
                     guideText.style.opacity = '0';
+                    // 메인 컨테이너가 보일 때 배경을 다시 진한 갈색으로 고정하는 효과를 위해 body 배경색 조절
+                    document.body.style.backgroundColor = '#3d2b1f';
                 } else {
                     mainContainer.style.display = 'none';
                     guideText.style.opacity = '1';
+                    // 스크롤이 올라가면 다시 아이보리 느낌 유지
+                    document.body.style.backgroundColor = '#FFFFF0';
                 }
             }
         };
@@ -112,7 +115,7 @@
             const sections = document.querySelectorAll('.content-section');
             sections.forEach(s => s.classList.remove('active'));
             document.getElementById(id).classList.add('active');
-            window.scrollTo(0, 0); // 콘텐츠 볼 때는 상단 고정 느낌
+            window.scrollTo(0, 0);
         }
 
         function showHome() {
