--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         .links a { text-decoration: none; color: #6B8E23; border: 2px solid #6B8E23; padding: 12px 25px; border-radius: 50px; transition: 0.3s; margin: 5px; font-weight: bold; cursor: pointer; display: inline-block; }
         .links a:hover { background: #6B8E23; color: #2f3a2e; }
 
-        /* 탭 공통 스타일 */
         .content-section { 
             display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100vh;
             background-color: #ece6cc !important; z-index: 1000; flex-direction: column;
@@ -35,26 +34,34 @@
         .back-btn { color: #6B8E23; cursor: pointer; text-decoration: underline; font-weight: bold; font-size: 1.1rem; }
         .scroll-area { width: 100%; flex: 1; overflow-y: auto; display: flex; flex-direction: column; align-items: center; padding-bottom: 100px; }
 
-        /* 영화 전용: 크고 시각적인 카드 */
-        .movie-grid { width: 95%; max-width: 800px; display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 20px; margin-top: 20px; }
+        /* 영화 카드: 이미지 안 잘리게 개선 */
+        .movie-grid { width: 95%; max-width: 900px; display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 20px; margin-top: 20px; }
         .movie-card { background: white; border-radius: 15px; overflow: hidden; color: #333; box-shadow: 0 10px 20px rgba(0,0,0,0.1); position: relative; display: flex; flex-direction: column; }
-        .movie-card img { width: 100%; height: 200px; object-fit: cover; }
-        .movie-card-content { padding: 20px; text-align: left; }
-        .movie-card-content h3 { margin: 0 0 10px 0; font-size: 1.4rem; color: #2c2a24; }
-        .movie-card-content .rating { color: #f1c40f; font-size: 1.1rem; margin-bottom: 8px; }
-        .movie-card-content p { margin: 0; font-size: 0.95rem; color: #555; line-height: 1.5; }
+        .movie-card img { width: 100%; height: 350px; object-fit: contain; background: #f9f9f9; } /* contain으로 변경하여 이미지 보존 */
+        .movie-card-content { padding: 15px; text-align: left; }
+        .movie-card-content h3 { margin: 0 0 5px 0; font-size: 1.2rem; color: #2c2a24; }
 
-        /* 일반 메모/추천 카드 */
-        .item-grid { width: 90%; max-width: 600px; display: flex; flex-direction: column; gap: 15px; margin-top: 20px; }
-        .item-card { background: white; border-radius: 12px; padding: 15px; display: flex; gap: 15px; align-items: center; position: relative; color: #333; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
-        .item-card img { width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0; }
-        .item-info { flex: 1; text-align: left; }
+        /* 메모/추천: 한 줄에 3개씩 배치되는 그리드 */
+        .item-grid { width: 95%; max-width: 900px; display: grid; grid-template-columns: repeat(3, 1fr); gap: 15px; margin-top: 20px; }
+        .item-card { 
+            background: white; border-radius: 15px; padding: 15px; color: #333; 
+            box-shadow: 0 4px 6px rgba(0,0,0,0.05); position: relative; 
+            display: flex; flex-direction: column; align-items: center; text-align: center;
+            aspect-ratio: 1 / 1; justify-content: center; /* 네모난 형태 유지 */
+        }
+        .item-card img { width: 60px; height: 60px; object-fit: cover; border-radius: 10px; margin-bottom: 10px; }
+        .item-info h3 { margin: 0; font-size: 1rem; color: #2c2a24; word-break: break-all; }
+        .item-info p { margin: 5px 0 0; font-size: 0.8rem; color: #777; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
         
-        .btn-group { position: absolute; top: 10px; right: 10px; display: flex; gap: 10px; }
-        .icon-btn { cursor: pointer; font-size: 1rem; opacity: 0.5; color: #333; font-weight: bold; }
+        /* 모바일 대응 (화면 작으면 2개 혹은 1개로) */
+        @media (max-width: 768px) { .item-grid { grid-template-columns: repeat(2, 1fr); } }
+        @media (max-width: 480px) { .item-grid { grid-template-columns: repeat(1, 1fr); } }
+
+        .btn-group { position: absolute; top: 8px; right: 8px; display: flex; gap: 5px; }
+        .icon-btn { cursor: pointer; font-size: 0.8rem; opacity: 0.4; color: #333; }
         .icon-btn:hover { opacity: 1; color: #6B8E23; }
 
-        /* 영화 탭 분할 섹션 */
+        /* 영화 탭 분할 */
         #movie.content-section { flex-direction: row; padding: 0; }
         .movie-split { width: 50%; height: 100%; display: flex; justify-content: center; align-items: center; cursor: pointer; transition: 0.4s; }
         .split-left { background: #5B5956; color: #E2DEDB; }
@@ -66,15 +73,13 @@
         .detail-layer { position: fixed; top: 0; left: 0; width: 100%; height: 100%; display: none; flex-direction: column; align-items: center; z-index: 1050; overflow: hidden; }
         .detail-layer.active { display: flex; }
 
-        /* 방명록 스타일 */
-        .guest-entry { background: white; color: #2c2a24; padding: 15px; border-radius: 12px; margin-bottom: 10px; position: relative; border-left: 6px solid #6B8E23; text-align: left; width: 100%; box-sizing: border-box; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
+        /* 방명록 */
+        .guest-entry { background: white; color: #2c2a24; padding: 15px; border-radius: 12px; margin-bottom: 10px; position: relative; border-left: 6px solid #6B8E23; text-align: left; width: 100%; box-sizing: border-box; }
 
-        /* 인트로 */
+        /* 인트로 및 모달 */
         #intro-screen { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: #3d2b1f; display: flex; justify-content: center; align-items: center; z-index: 3000; cursor: pointer; flex-direction: column; }
         #intro-screen h2 { color: #6B8E23; font-size: 2rem; animation: pulse 2s infinite; }
         @keyframes pulse { 0% { opacity: 0.4; } 50% { opacity: 1; } 100% { opacity: 0.4; } }
-
-        /* 모달 */
         .modal { display: none; position: fixed; z-index: 4000; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); justify-content: center; align-items: center; }
         .modal-content { background: white; padding: 25px; border-radius: 15px; width: 320px; color: #333; }
         .modal-content input, .modal-content textarea { width: 100%; padding: 10px; margin-bottom: 10px; border: 1px solid #ccc; border-radius: 5px; box-sizing: border-box; }
@@ -109,8 +114,8 @@
         <h1>경제 뉴스</h1>
         <div class="scroll-area">
             <iframe src="https://www.tradingview-widget.com/embed-widget/timeline/?locale=kr" style="width: 90%; height: 500px; border: none; border-radius: 15px; flex-shrink: 0;"></iframe>
-            <div style="width:90%; max-width:600px; text-align:left; color:#2c2a24; font-weight:bold; margin-top:20px;">경제 메모</div>
-            <div onclick="openItemModal('memo-economy')" style="cursor:pointer; color:#6B8E23; margin: 10px 0;">+ 메모 추가</div>
+            <div style="width:90%; max-width:900px; text-align:left; color:#2c2a24; font-weight:bold; margin-top:20px;">경제 메모</div>
+            <div onclick="openItemModal('memo-economy')" style="cursor:pointer; color:#6B8E23; margin: 10px 0; font-weight: bold;">+ 추가</div>
             <div class="item-grid" id="grid-memo-economy"></div>
         </div>
         <div class="fixed-footer"><span class="back-btn" onclick="showHome()">뒤로가기</span></div>
@@ -120,8 +125,8 @@
         <h1>주식 시세</h1>
         <div class="scroll-area">
             <iframe src="https://www.tradingview-widget.com/embed-widget/market-overview/?locale=kr" style="width: 90%; height: 500px; border: none; border-radius: 15px; flex-shrink: 0;"></iframe>
-            <div style="width:90%; max-width:600px; text-align:left; color:#2c2a24; font-weight:bold; margin-top:20px;">주식 메모</div>
-            <div onclick="openItemModal('memo-stocks')" style="cursor:pointer; color:#6B8E23; margin: 10px 0;">+ 메모 추가</div>
+            <div style="width:90%; max-width:900px; text-align:left; color:#2c2a24; font-weight:bold; margin-top:20px;">주식 메모</div>
+            <div onclick="openItemModal('memo-stocks')" style="cursor:pointer; color:#6B8E23; margin: 10px 0; font-weight: bold;">+ 추가</div>
             <div class="item-grid" id="grid-memo-stocks"></div>
         </div>
         <div class="fixed-footer"><span class="back-btn" onclick="showHome()">뒤로가기</span></div>
@@ -130,8 +135,8 @@
     <div id="music" class="content-section">
         <h1>내 플리</h1>
         <div class="scroll-area">
-            <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DXcBWIGoYBM3M" width="85%" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media" style="border-radius:12px; margin-bottom:30px; flex-shrink: 0;"></iframe>
-            <div style="width:90%; max-width:600px; text-align:left; color:#2c2a24; font-weight:bold; font-size:1.2rem; margin-bottom:10px;">추천</div>
+            <iframe src="http://googleusercontent.com/spotify.com/8" width="85%" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media" style="border-radius:12px; margin-bottom:30px; flex-shrink: 0;"></iframe>
+            <div style="width:90%; max-width:900px; text-align:left; color:#2c2a24; font-weight:bold; font-size:1.2rem; margin-bottom:10px;">추천</div>
             <div onclick="openItemModal('music-list')" style="cursor:pointer; font-size:1.5rem; color:#6B8E23; border:2px solid #6B8E23; width:40px; height:40px; border-radius:50%; display:flex; justify-content:center; align-items:center; margin-bottom:20px;">+</div>
             <div class="item-grid" id="grid-music-list"></div>
         </div>
@@ -180,7 +185,7 @@
             <input type="text" id="in-name" placeholder="제목/이름">
             <input type="text" id="in-url" placeholder="이미지(포스터) URL">
             <input type="text" id="in-rate" placeholder="별점 (예: ★★★★☆)">
-            <textarea id="in-desc" placeholder="내용 및 한 줄 평" rows="4"></textarea>
+            <textarea id="in-desc" placeholder="내용 및 한 줄 평" rows="3"></textarea>
             <button onclick="saveItem()" style="width:100%; padding:12px; background:#6B8E23; color:white; border:none; border-radius:8px; cursor:pointer; font-weight:bold;">저장하기</button>
             <button onclick="closeItemModal()" style="width:100%; padding:10px; background:#ccc; border:none; border-radius:8px; margin-top:5px; cursor:pointer;">취소</button>
         </div>
@@ -188,8 +193,7 @@
 
     <script>
         const ADMIN_PW = "9906281";
-        let currentTargetKey = ""; 
-        let editIndex = -1;
+        let currentTargetKey = ""; let editIndex = -1;
 
         function startScrollPage() { document.getElementById('intro-screen').style.display='none'; document.getElementById('scroll-page').style.display='block'; window.scrollTo(0,0); }
         window.onscroll = function() {
@@ -238,11 +242,10 @@
 
         function saveItem() {
             const name = document.getElementById('in-name').value;
-            const url = document.getElementById('in-url').value || 'https://via.placeholder.com/400x200?text=No+Image';
+            const url = document.getElementById('in-url').value || 'https://via.placeholder.com/400x600?text=No+Image';
             const rate = document.getElementById('in-rate').value;
             const desc = document.getElementById('in-desc').value;
             if(!name) return alert("제목을 입력해주세요.");
-
             const list = JSON.parse(localStorage.getItem(currentTargetKey) || '[]');
             if(editIndex === -1) { list.unshift({ name, url, rate, desc }); }
             else { if(prompt("수정 암호") !== ADMIN_PW) return alert("암호 오류"); list[editIndex] = { name, url, rate, desc }; }
@@ -254,39 +257,33 @@
             const list = JSON.parse(localStorage.getItem(key) || '[]');
             const grid = document.getElementById('grid-' + key);
             if(!grid) return;
-
-            // 영화 탭인 경우 다르게 렌더링
             if(key.includes('movies')) {
                 grid.innerHTML = list.map((m, i) => `
                     <div class="movie-card">
-                        <img src="${m.url}" onerror="this.src='https://via.placeholder.com/400x200?text=Movie+Poster'">
+                        <img src="${m.url}" onerror="this.src='https://via.placeholder.com/400x600?text=Poster'">
                         <div class="movie-card-content">
                             <h3>${m.name}</h3>
-                            ${m.rate ? `<div class="rating">${m.rate}</div>` : ''}
+                            ${m.rate ? `<div style="color:#f1c40f;">${m.rate}</div>` : ''}
                             <p>${m.desc}</p>
                         </div>
                         <div class="btn-group">
                             <span class="icon-btn" onclick="openItemModal('${key}', ${i})">✎</span>
                             <span class="icon-btn" onclick="delItem('${key}', ${i})">×</span>
                         </div>
-                    </div>
-                `).join('');
+                    </div>`).join('');
             } else {
-                // 일반 메모/추천 렌더링
                 grid.innerHTML = list.map((m, i) => `
                     <div class="item-card">
                         ${m.url ? `<img src="${m.url}" onerror="this.style.display='none'">` : ''}
                         <div class="item-info">
-                            <h3 style="margin:0;">${m.name}</h3>
-                            ${m.rate ? `<div style="color:#f1c40f; font-size:0.8rem;">${m.rate}</div>` : ''}
-                            <p style="margin:5px 0 0; color:#666;">${m.desc}</p>
+                            <h3>${m.name}</h3>
+                            <p>${m.desc}</p>
                         </div>
                         <div class="btn-group">
                             <span class="icon-btn" onclick="openItemModal('${key}', ${i})">✎</span>
                             <span class="icon-btn" onclick="delItem('${key}', ${i})">×</span>
                         </div>
-                    </div>
-                `).join('');
+                    </div>`).join('');
             }
         }
 
@@ -309,9 +306,7 @@
             const entries = JSON.parse(localStorage.getItem('my-gb-v2') || '[]');
             document.getElementById('guestbook-list').innerHTML = entries.map((e, i) => `
                 <div class="guest-entry">
-                    <div class="btn-group">
-                        <span class="icon-btn" onclick="delGuestbook(${i})">×</span>
-                    </div>
+                    <div class="btn-group"><span class="icon-btn" onclick="delGuestbook(${i})">×</span></div>
                     <strong>익명</strong>: ${e.text}<br><small style="color:#999">${e.date}</small>
                 </div>`).join('');
         }
