--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         } 
         #home-main h1 { font-size: 3.5rem; letter-spacing: -1px; margin-bottom: 10px; color: #f5f1e4; }
         #home-main p { font-size: 1.5rem; margin-bottom: 30px; font-weight: bold; color: #f5f1e4; }
-        .links a { text-decoration: none; color: #6B8E23; border: 2px solid #6B8E23; padding: 12px 25px; border-radius: 50px; transition: 0.3s; margin: 5px; font-weight: bold; cursor: pointer; display: inline-block; }
+        .links { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; }
+        .links a { text-decoration: none; color: #6B8E23; border: 2px solid #6B8E23; padding: 12px 25px; border-radius: 50px; transition: 0.3s; font-weight: bold; cursor: pointer; }
         .links a:hover { background: #6B8E23; color: #2f3a2e; }
 
         .content-section { 
@@ -34,46 +35,53 @@
         .back-btn { color: #6B8E23; cursor: pointer; text-decoration: underline; font-weight: bold; font-size: 1.1rem; }
         .scroll-area { width: 100%; flex: 1; overflow-y: auto; display: flex; flex-direction: column; align-items: center; padding-bottom: 100px; }
 
-        /* 영화 카드: 이미지 안 잘리게 개선 */
-        .movie-grid { width: 95%; max-width: 900px; display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 20px; margin-top: 20px; }
-        .movie-card { background: white; border-radius: 15px; overflow: hidden; color: #333; box-shadow: 0 10px 20px rgba(0,0,0,0.1); position: relative; display: flex; flex-direction: column; }
-        .movie-card img { width: 100%; height: 350px; object-fit: contain; background: #f9f9f9; } /* contain으로 변경하여 이미지 보존 */
+        /* 영화 카드: 테두리 강화 및 상단 여백 추가 */
+        .movie-grid { width: 95%; max-width: 1100px; display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 25px; margin-top: 20px; }
+        .movie-card { 
+            background: white; border-radius: 15px; overflow: hidden; color: #333; 
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1); position: relative; display: flex; flex-direction: column;
+            border: 2px solid #bbb; /* 테두리 확실하게 구분 */
+        }
+        .movie-card img { 
+            width: 100%; height: 350px; object-fit: contain; 
+            background: #f9f9f9; padding-top: 20px; /* 상단 이미지 띄움 */
+        }
         .movie-card-content { padding: 15px; text-align: left; }
-        .movie-card-content h3 { margin: 0 0 5px 0; font-size: 1.2rem; color: #2c2a24; }
 
-        /* 메모/추천: 한 줄에 3개씩 배치되는 그리드 */
-        .item-grid { width: 95%; max-width: 900px; display: grid; grid-template-columns: repeat(3, 1fr); gap: 15px; margin-top: 20px; }
+        /* 메모지 그리드: 한 줄에 4개 */
+        .item-grid { width: 95%; max-width: 1200px; display: grid; grid-template-columns: repeat(4, 1fr); gap: 15px; margin-top: 20px; }
         .item-card { 
             background: white; border-radius: 15px; padding: 15px; color: #333; 
-            box-shadow: 0 4px 6px rgba(0,0,0,0.05); position: relative; 
+            box-shadow: 0 4px 8px rgba(0,0,0,0.08); position: relative; 
             display: flex; flex-direction: column; align-items: center; text-align: center;
-            aspect-ratio: 1 / 1; justify-content: center; /* 네모난 형태 유지 */
+            aspect-ratio: 1 / 1.1; justify-content: flex-start;
+            border: 1px solid #ddd;
         }
-        .item-card img { width: 60px; height: 60px; object-fit: cover; border-radius: 10px; margin-bottom: 10px; }
-        .item-info h3 { margin: 0; font-size: 1rem; color: #2c2a24; word-break: break-all; }
-        .item-info p { margin: 5px 0 0; font-size: 0.8rem; color: #777; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
+        /* 이미지 크기 확대 */
+        .item-card img { width: 100px; height: 100px; object-fit: cover; border-radius: 12px; margin-bottom: 12px; margin-top: 10px; }
+        .item-info h3 { margin: 0; font-size: 1.1rem; color: #2c2a24; }
+        .item-info p { margin: 8px 0 0; font-size: 0.85rem; color: #666; line-height: 1.4; }
         
-        /* 모바일 대응 (화면 작으면 2개 혹은 1개로) */
+        /* 반응형: 화면이 좁아질 때 */
+        @media (max-width: 1024px) { .item-grid { grid-template-columns: repeat(3, 1fr); } }
         @media (max-width: 768px) { .item-grid { grid-template-columns: repeat(2, 1fr); } }
         @media (max-width: 480px) { .item-grid { grid-template-columns: repeat(1, 1fr); } }
 
-        .btn-group { position: absolute; top: 8px; right: 8px; display: flex; gap: 5px; }
-        .icon-btn { cursor: pointer; font-size: 0.8rem; opacity: 0.4; color: #333; }
+        .btn-group { position: absolute; top: 10px; right: 10px; display: flex; gap: 8px; }
+        .icon-btn { cursor: pointer; font-size: 0.9rem; opacity: 0.5; color: #333; }
         .icon-btn:hover { opacity: 1; color: #6B8E23; }
 
-        /* 영화 탭 분할 */
+        /* 영화 탭 내부 구조 */
         #movie.content-section { flex-direction: row; padding: 0; }
         .movie-split { width: 50%; height: 100%; display: flex; justify-content: center; align-items: center; cursor: pointer; transition: 0.4s; }
         .split-left { background: #5B5956; color: #E2DEDB; }
-        .split-left:hover { background: #8FBFD6 !important; color: #5B5956 !important; }
         .split-right { background: #E2DEDB; color: #5B5956; }
-        .split-right:hover { background: #E9A4C8 !important; color: #E2DEDB !important; }
         .movie-split h2 { font-size: 4rem; pointer-events: none; }
         
         .detail-layer { position: fixed; top: 0; left: 0; width: 100%; height: 100%; display: none; flex-direction: column; align-items: center; z-index: 1050; overflow: hidden; }
         .detail-layer.active { display: flex; }
 
-        /* 방명록 */
+        /* 방명록 스타일 */
         .guest-entry { background: white; color: #2c2a24; padding: 15px; border-radius: 12px; margin-bottom: 10px; position: relative; border-left: 6px solid #6B8E23; text-align: left; width: 100%; box-sizing: border-box; }
 
         /* 인트로 및 모달 */
@@ -114,7 +122,7 @@
         <h1>경제 뉴스</h1>
         <div class="scroll-area">
             <iframe src="https://www.tradingview-widget.com/embed-widget/timeline/?locale=kr" style="width: 90%; height: 500px; border: none; border-radius: 15px; flex-shrink: 0;"></iframe>
-            <div style="width:90%; max-width:900px; text-align:left; color:#2c2a24; font-weight:bold; margin-top:20px;">경제 메모</div>
+            <div style="width:90%; max-width:1200px; text-align:left; color:#2c2a24; font-weight:bold; margin-top:20px;">경제 메모</div>
             <div onclick="openItemModal('memo-economy')" style="cursor:pointer; color:#6B8E23; margin: 10px 0; font-weight: bold;">+ 추가</div>
             <div class="item-grid" id="grid-memo-economy"></div>
         </div>
@@ -125,7 +133,7 @@
         <h1>주식 시세</h1>
         <div class="scroll-area">
             <iframe src="https://www.tradingview-widget.com/embed-widget/market-overview/?locale=kr" style="width: 90%; height: 500px; border: none; border-radius: 15px; flex-shrink: 0;"></iframe>
-            <div style="width:90%; max-width:900px; text-align:left; color:#2c2a24; font-weight:bold; margin-top:20px;">주식 메모</div>
+            <div style="width:90%; max-width:1200px; text-align:left; color:#2c2a24; font-weight:bold; margin-top:20px;">주식 메모</div>
             <div onclick="openItemModal('memo-stocks')" style="cursor:pointer; color:#6B8E23; margin: 10px 0; font-weight: bold;">+ 추가</div>
             <div class="item-grid" id="grid-memo-stocks"></div>
         </div>
@@ -135,8 +143,8 @@
     <div id="music" class="content-section">
         <h1>내 플리</h1>
         <div class="scroll-area">
-            <iframe src="http://googleusercontent.com/spotify.com/8" width="85%" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media" style="border-radius:12px; margin-bottom:30px; flex-shrink: 0;"></iframe>
-            <div style="width:90%; max-width:900px; text-align:left; color:#2c2a24; font-weight:bold; font-size:1.2rem; margin-bottom:10px;">추천</div>
+            <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DXcBWIGoYBM3M" width="85%" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media" style="border-radius:12px; margin-bottom:30px; flex-shrink: 0;"></iframe>
+            <div style="width:90%; max-width:1200px; text-align:left; color:#2c2a24; font-weight:bold; font-size:1.2rem; margin-bottom:10px;">추천 리스트</div>
             <div onclick="openItemModal('music-list')" style="cursor:pointer; font-size:1.5rem; color:#6B8E23; border:2px solid #6B8E23; width:40px; height:40px; border-radius:50%; display:flex; justify-content:center; align-items:center; margin-bottom:20px;">+</div>
             <div class="item-grid" id="grid-music-list"></div>
         </div>
