--- a/index.html
+++ b/index.html
@@ -35,56 +35,51 @@
         .back-btn { color: #6B8E23; cursor: pointer; text-decoration: underline; font-weight: bold; font-size: 1.1rem; }
         .scroll-area { width: 100%; flex: 1; overflow-y: auto; display: flex; flex-direction: column; align-items: center; padding-bottom: 100px; }
 
-        /* 영화 카드: 테두리 강화 및 상단 여백 추가 */
-        .movie-grid { width: 95%; max-width: 1100px; display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 25px; margin-top: 20px; }
+        /* 영화 카드: 4열 배치로 변경 */
+        .movie-grid { width: 95%; max-width: 1400px; display: grid; grid-template-columns: repeat(4, 1fr); gap: 20px; margin-top: 20px; }
         .movie-card { 
             background: white; border-radius: 15px; overflow: hidden; color: #333; 
             box-shadow: 0 4px 15px rgba(0,0,0,0.1); position: relative; display: flex; flex-direction: column;
-            border: 2px solid #bbb; /* 테두리 확실하게 구분 */
+            border: 2px solid #bbb; 
         }
-        .movie-card img { 
-            width: 100%; height: 350px; object-fit: contain; 
-            background: #f9f9f9; padding-top: 20px; /* 상단 이미지 띄움 */
-        }
+        .movie-card img { width: 100%; height: 300px; object-fit: contain; background: #f9f9f9; padding-top: 15px; }
         .movie-card-content { padding: 15px; text-align: left; }
 
-        /* 메모지 그리드: 한 줄에 4개 */
+        /* 일반 메모지 그리드: 4열 유지 */
         .item-grid { width: 95%; max-width: 1200px; display: grid; grid-template-columns: repeat(4, 1fr); gap: 15px; margin-top: 20px; }
         .item-card { 
             background: white; border-radius: 15px; padding: 15px; color: #333; 
             box-shadow: 0 4px 8px rgba(0,0,0,0.08); position: relative; 
             display: flex; flex-direction: column; align-items: center; text-align: center;
-            aspect-ratio: 1 / 1.1; justify-content: flex-start;
-            border: 1px solid #ddd;
+            aspect-ratio: 1 / 1.1; justify-content: flex-start; border: 1px solid #ddd;
         }
-        /* 이미지 크기 확대 */
         .item-card img { width: 100px; height: 100px; object-fit: cover; border-radius: 12px; margin-bottom: 12px; margin-top: 10px; }
         .item-info h3 { margin: 0; font-size: 1.1rem; color: #2c2a24; }
-        .item-info p { margin: 8px 0 0; font-size: 0.85rem; color: #666; line-height: 1.4; }
+        .item-info p { margin: 8px 0 0; font-size: 0.85rem; color: #666; }
         
-        /* 반응형: 화면이 좁아질 때 */
-        @media (max-width: 1024px) { .item-grid { grid-template-columns: repeat(3, 1fr); } }
-        @media (max-width: 768px) { .item-grid { grid-template-columns: repeat(2, 1fr); } }
-        @media (max-width: 480px) { .item-grid { grid-template-columns: repeat(1, 1fr); } }
+        /* 반응형 설정 */
+        @media (max-width: 1200px) { .movie-grid, .item-grid { grid-template-columns: repeat(3, 1fr); } }
+        @media (max-width: 800px) { .movie-grid, .item-grid { grid-template-columns: repeat(2, 1fr); } }
+        @media (max-width: 500px) { .movie-grid, .item-grid { grid-template-columns: repeat(1, 1fr); } }
 
         .btn-group { position: absolute; top: 10px; right: 10px; display: flex; gap: 8px; }
         .icon-btn { cursor: pointer; font-size: 0.9rem; opacity: 0.5; color: #333; }
         .icon-btn:hover { opacity: 1; color: #6B8E23; }
 
-        /* 영화 탭 내부 구조 */
+        /* 영화 탭 호버 효과 복구 */
         #movie.content-section { flex-direction: row; padding: 0; }
         .movie-split { width: 50%; height: 100%; display: flex; justify-content: center; align-items: center; cursor: pointer; transition: 0.4s; }
         .split-left { background: #5B5956; color: #E2DEDB; }
+        .split-left:hover { background: #8FBFD6 !important; color: #5B5956 !important; }
         .split-right { background: #E2DEDB; color: #5B5956; }
+        .split-right:hover { background: #E9A4C8 !important; color: #E2DEDB !important; }
         .movie-split h2 { font-size: 4rem; pointer-events: none; }
         
         .detail-layer { position: fixed; top: 0; left: 0; width: 100%; height: 100%; display: none; flex-direction: column; align-items: center; z-index: 1050; overflow: hidden; }
         .detail-layer.active { display: flex; }
 
-        /* 방명록 스타일 */
         .guest-entry { background: white; color: #2c2a24; padding: 15px; border-radius: 12px; margin-bottom: 10px; position: relative; border-left: 6px solid #6B8E23; text-align: left; width: 100%; box-sizing: border-box; }
 
-        /* 인트로 및 모달 */
         #intro-screen { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: #3d2b1f; display: flex; justify-content: center; align-items: center; z-index: 3000; cursor: pointer; flex-direction: column; }
         #intro-screen h2 { color: #6B8E23; font-size: 2rem; animation: pulse 2s infinite; }
         @keyframes pulse { 0% { opacity: 0.4; } 50% { opacity: 1; } 100% { opacity: 0.4; } }
